--- a/bevy_assets_tar_zstd/Cargo.toml
+++ b/bevy_assets_tar_zstd/Cargo.toml
@@ -2,6 +2,10 @@
 name = "bevy_assets_tar_zstd"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+authors = [ "Fionn Langhans <fionn.langhans@gmail.com>" ]
+repository = "https://github.com/codefionn/bevy_assets_tar_zstd"
+description = "Asset loader using .tar.zstd"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
